# RaspKiosk

./: LICENSE  README.md  kioskconfig.yaml  package.json
.github/workflows/: build-linux.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
